lots of changes and updates

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "type": "module",
   "dependencies": {
     "@okta/okta-signin-widget": "^7.14.1",
-    "@tylertech/tyler-icons": "^1.17.1"
+    "@tylertech/tyler-icons": "^1.17.1",
+    "svelte-dnd-action": "^0.9.42"
   }
 }
